# CMake-Simple-template

src/: CMakeLists.txt  main.cpp
src/headers/: AppConfiguration.h
